--- a/tictactoe/src/index.css
+++ b/tictactoe/src/index.css
@@ -1,42 +1,28 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: cornflowerblue;
+body{
+    background-color: orange;
+    color: white;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.heading{
+    justify-content: center;
+    align-items: center;
 }
-.mainbox{
-    margin-left:500px;
-    margin-top:150px;
-    margin-right:471px;
-    background-color: white;
-    border:1px solid black;
+.mainbox {
+	width: 400px;
+	height: 400px;
+    margin: 20px auto;
+    background-color:black;
+    color:orange!important;
+    border: 2px solid white;
+	display: grid;
+	grid-template: repeat(3, 1fr) / repeat(3, 1fr);
 }
-.box1{
-    height:100px;
-    width:100px;
-    border: 1px solid black;
-    margin: auto;
-    display: inline-block;
-}
-.box2{
-    height:100px;
-    width:100px;
-    border: 1px solid black;
-    margin: auto;
-    display: inline-block;
-}
-.box3{
-    height:100px;
-    width:100px;
-    border: 1px solid black;
-    margin: auto;
-    display: inline-block;
+.box {
+  border: 2px solid white;
+  border-radius: 2px;
+  align-items: center;
+  font-weight: bold;
+  font-size: 3em;
+  color: orange!important;
+  display: flex;
+  justify-content: center;
 }
